# LLM_AGENT

./: .gitignore  Data_Klik_Dokter.csv  Evaluation.ipynb  README.md  analisis_penyakit_dari_gejala_task_report.md  classification_task_report.md  df_penyakit.xlsx  drug_recommendation_task_report.md  memory.json  output_handler_task_report.md  output_manager_task_report.md  pyproject.toml  rekomendasi_obat_report.md  symptoms_analyzer_task_report.md
AI-agent.git/: config  packed-refs
AI-agent.git/info/: refs
AI-agent.git/objects/info/: commit-graph  packs
AI-agent.git/objects/pack/: pack-d9a28dc0be66799c77a451587d124aff59060b8e.bitmap  pack-d9a28dc0be66799c77a451587d124aff59060b8e.idx  pack-d9a28dc0be66799c77a451587d124aff59060b8e.pack  pack-d9a28dc0be66799c77a451587d124aff59060b8e.rev
AI-agent.git/refs/heads/: versi-bersih
src/openai/: application.py  crew.py  main.py  memoryParser.py
src/openai/config/: agents.yaml  tasks.yaml
src/openai/tools/: Rag.py  detect_language.py  rag.py
