[project]
name = "openai"
version = "0.1.0"
description = "openai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
openai = "openai.main:run"
run_crew = "openai.main:run"
train = "openai.main:train"
replay = "openai.main:replay"
test = "openai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
